--- a/tox.ini
+++ b/tox.ini
@@ -29,10 +29,11 @@ per-file-ignores=
     docs.py:B008
 
 [isort]
-profile = black
-multi_line_output=5
-include_trailing_comma=True
+profile=black
+multi_line_output=3
+include_trailing_comma=true
 force_grid_wrap=0
-use_parentheses=True
-ensure_newline_before_comments=True
+use_parentheses=true
+ensure_newline_before_comments=true
 line_length=110
+atomic=true
