nit: add missing commas to flake8 config and fix format

--- a/tox.ini
+++ b/tox.ini
@@ -2,16 +2,17 @@
 max-line-length=110
 application_import_names=modmail
 docstring-convention=all
-exclude=modmail/config.py,
-        __pycache__,
-        .cache,.git,
-        .md,.svg,.png
-        venv,.venv,
-        .json,
-        docs/
+exclude=
+    modmail/config.py,
+    __pycache__,
+    .cache,.git,
+    .md,.svg,.png,
+    venv,.venv,
+    .json,
+    docs/
 
 ignore=
-    B311,W503,E226,S311,T000
+    B311,W503,E226,S311,T000,
     # Missing Docstrings
     D100,D104,D105,D107,
     # Docstring Whitespace
@@ -19,9 +20,9 @@ ignore=
     # Docstring Quotes
     D301,D302,
     # Docstring Content
-    D400,D401,D402,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D416,D417
+    D400,D401,D402,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D416,D417,
     # Type Annotations
-    ANN002,ANN003,ANN101,ANN102,ANN204,ANN206
+    ANN002,ANN003,ANN101,ANN102,ANN204,ANN206,
     # Whitespace Before
     E203
 per-file-ignores=
