pre-commit: add check for large files
Adds a check for large files being commited. Inital checking starts at
500kb.
As we support windows, adds a check to ensure that we don't have two
files named with the same name, in different Cases.

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,17 +5,20 @@ repos:
     rev: v4.0.1
     hooks:
       - id: check-merge-conflict
+      - id: check-added-large-files
+      - id: check-case-conflict
       - id: check-json
       - id: check-toml
+      - id: check-xml
       - id: check-yaml
         exclude: 'mkdocs.yml' # Exclude all mkdocs.yml as they use tags i.e. `!!!`
       - id: pretty-format-json
-        args: ['--indent=4','--autofix']
+        args: [--indent=4, --autofix]
       - id: end-of-file-fixer
       - id: no-commit-to-branch
         args: [--branch=main, --branch=master]
       - id: mixed-line-ending
-        args: [ --fix=lf ]
+        args: [--fix=lf]
       - id: trailing-whitespace
         args: [--markdown-linebreak-ext=md]
 
